[gd_scene format=3 uid="uid://krw76abox8r3"]

[ext_resource type="Script" uid="uid://blm45b8q7uqt5" path="res://scripts/objects/block_detector.gd" id="1_ealfv"]

[node name="BlockDetect" type="Node2D" unique_id=2042283883]
script = ExtResource("1_ealfv")
metadata/_custom_type_script = "uid://blm45b8q7uqt5"

[node name="Right" type="RayCast2D" parent="." unique_id=409331326]
enabled = false
target_position = Vector2(45, 0)
collision_mask = 8
collide_with_areas = true

[node name="Left" type="RayCast2D" parent="." unique_id=1079650675]
enabled = false
target_position = Vector2(-45, 0)
collision_mask = 8

[node name="Right2" type="RayCast2D" parent="." unique_id=1037801714]
visible = false
position = Vector2(0, -64)
enabled = false
target_position = Vector2(45, 0)
collision_mask = 8

[node name="Left2" type="RayCast2D" parent="." unique_id=1695914218]
visible = false
position = Vector2(0, -64)
enabled = false
target_position = Vector2(-45, 0)
collision_mask = 8

[node name="Down" type="RayCast2D" parent="." unique_id=553699482]
enabled = false
target_position = Vector2(0, 45)
collision_mask = 8

[node name="CherryBombRays" type="Node2D" parent="." unique_id=562371206]

[node name="Right" type="RayCast2D" parent="CherryBombRays" unique_id=1905299609]
target_position = Vector2(55, 0)
collision_mask = 2

[node name="Left" type="RayCast2D" parent="CherryBombRays" unique_id=1850835198]
target_position = Vector2(-55, 0)
collision_mask = 2

[node name="Up" type="RayCast2D" parent="CherryBombRays" unique_id=203403018]
target_position = Vector2(0, -55)
collision_mask = 2

[node name="DownRays" type="Node2D" parent="." unique_id=1049085495]

[node name="Down" type="RayCast2D" parent="DownRays" unique_id=1562054741]
enabled = false
target_position = Vector2(-30, 35)

[node name="Down2" type="RayCast2D" parent="DownRays" unique_id=1756094494]
enabled = false
target_position = Vector2(30, 35)
